main.tf
terraform {
  required_version = ">= 0.12.21"
}

provider "aws" {
  version = ">= 2.70"
  region  = var.region
}

data "aws_eks_cluster" "cluster" {
  name = module.eks.cluster_id
}

data "aws_eks_cluster_auth" "cluster" {
  name = module.eks.cluster_id
}

data "aws_availability_zones" "available" {
}

# AWS Security Group
resource "aws_security_group" "worker_group_SG" {
  name_prefix = "worker_group_SG"
  vpc_id      = module.vpc.vpc_id

  ingress {
    from_port = 22
    to_port   = 22
    protocol  = "tcp"

    cidr_blocks = [
      "10.0.5.0/24",
    ]
  }
}

# AWS VPC module
module "vpc" {
  source  = "terraform-aws-modules/vpc/aws"
   version = "2.77.0"

  name                 = "team-project-vpc"
  cidr                 = "10.0.0.0/16"
  azs                  = data.aws_availability_zones.available.names
  private_subnets      = ["10.0.1.0/24", "10.0.2.0/24"]
  public_subnets       = ["10.0.4.0/24", "10.0.5.0/24"]
  enable_nat_gateway   = true
  single_nat_gateway   = true
  enable_dns_hostnames = true

  public_subnet_tags = {
    "kubernetes.io/cluster/${var.cluster_name}" = "shared"
    "kubernetes.io/role/elb"                      = "1"
  }

  private_subnet_tags = {
    "kubernetes.io/cluster/${var.cluster_name}" = "shared"
    "kubernetes.io/role/internal-elb"             = "1"
  }
}

# AWS EKS module
module "eks" {
  source       = "terraform-aws-modules/eks/aws"
  cluster_name    = var.cluster_name
  cluster_version = "1.17"
  subnets         = module.vpc.public_subnets
  version = "14.0.0"
  cluster_create_timeout = "1h"
  cluster_endpoint_private_access = true 

  vpc_id = module.vpc.vpc_id

  worker_groups = [
    {
      name                          = "worker-group-1"
      instance_type                 = "t2.small"
      additional_userdata           = "echo Server started"
      asg_desired_capacity          = 1
      additional_security_group_ids = [aws_security_group.worker_group_SG.id]
    },
  ]

#   worker_additional_security_group_ids = [aws_security_group.all_worker_mgmt.id]
#   map_roles                            = var.map_roles
#   map_users                            = var.map_users
#   map_accounts                         = var.map_accounts
}


# Kubernetes Provider
provider "kubernetes" {
  host                   = data.aws_eks_cluster.cluster.endpoint
  cluster_ca_certificate = base64decode(data.aws_eks_cluster.cluster.certificate_authority.0.data)
  token                  = data.aws_eks_cluster_auth.cluster.token
  load_config_file       = false
  version                = "~> 1.11"
}

# Kubernetes Deployment
resource "kubernetes_deployment" "deploy-jenkins" {
  metadata {
    name = "deploy-jenkins"
    labels = {
      name = "teamProject"
    }
  }

  spec {
    replicas = 2

    selector {
      match_labels = {
        name = "teamProject"
      }
    }

    template {
      metadata {
        labels = {
          name = "teamProject"
        }
      }

      spec {
        container {
          image = "jenkins/jenkins:lts"
          name  = "jenkins-instance"

          resources {
            limits {
              cpu    = "0.5"
              memory = "512Mi"
            }
            requests {
              cpu    = "250m"
              memory = "50Mi"
            }
          }
        }
      }
    }
  }
}

# Kubernetes Service
resource "kubernetes_service" "service-jenkins" {
  metadata {
    name = "service-jenkins"
  }
  spec {
    selector = {
      name = "teamProject"
    }
    port {
      port        = 80
      target_port = 80
    }

    type = "LoadBalancer"
  }
}
