securitygroups.tf
resource "aws_security_group" "demo-cluster" {
    name = "terraform-eks-demo-cluster"
    description = "Cluster communication with worker nodes"
    vpc_id = "${module.vpc.vpc_id}"

    egress {
        from_port = 0
        to_port = 0 
        protocol = "-1"
        cidr_blocks = ["0.0.0.0/0"]
    }

    tags =  {
        Name = "terraform-eks-demo"
    }
}

resource "aws_security_group_rule" "demo-cluster-ingress-node-https" {
    description = "Allow pods to communicate with the cluster API Server"
    from_port = 443
    to_port = 443
    protocol = "tcp"
    type = "ingress"
    security_group_id = "${aws_security_group.demo-cluster.id}"
    source_security_group_id = "${aws_security_group.demo-node.id}"
}

resource "aws_security_group_rule" "demo-cluster-ingress-workstation-https" {
    cidr_blocks = ["${local.workstation-external-cidr}"]
    description = "Allow workstation to communicate with the cluster API Server"
    from_port = 443
    to_port = 443
    protocol = "tcp"
    type = "ingress"
    security_group_id = "${aws_security_group.demo-cluster.id}"
}
